option java_outer_classname = "LCLocationDataSave";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.terminal";

import "core/proto/common/java/LocationData.proto";

message LocationDataSave{
	required	int64	terminalId				=1;
	required	LocationData	locationData	=2;
}